[gd_scene load_steps=4 format=2]

[ext_resource path="res://game/UI/ColonistActionTypePick.gd" type="Script" id=1]
[ext_resource path="res://assets/pieces/player_template_background.png" type="Texture" id=2]
[ext_resource path="res://assets/test_font.tres" type="DynamicFont" id=3]

[node name="ColonistActionTypePick" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 672.0
margin_top = 456.0
margin_right = 1312.0
margin_bottom = 648.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsButton" type="Button" parent="."]
margin_left = 696.0
margin_top = 480.0
margin_right = 1288.0
margin_bottom = 532.0
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColonistsButton" type="Button" parent="."]
margin_left = 792.0
margin_top = 560.0
margin_right = 1212.0
margin_bottom = 616.0
custom_fonts/font = ExtResource( 3 )
text = "PLACE COLONISTS"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CoinsButton" to="." method="_on_CoinsButton_pressed"]
[connection signal="pressed" from="ColonistsButton" to="." method="_on_ColonistsButton_pressed"]
